1999-08-02  James Henstridge  <james@daa.com.au>

	* gtk.py (idle_add, timeout_add, quit_add): pass extra arguments to
	the callback.

	* libglademodule.c (_wrap_glade_xml_signal_connect): fixed a small
	problem with reference counting here.

	* gtkmodule.c: added support for passing arguments to timeout, quit
	and idle functions.

1999-08-01  James Henstridge  <james@daa.com.au>

	* pyglade/build.py (optionmenu_new): a small fix from David Cole.

	* configure.in: added tests to see if libglade is installed.

	* libglademodule.c: the rest of the libglade module

	* generate/libglade.defs: a .defs file for libglade.

1999-07-31  James Henstridge  <james@daa.com.au>

	* gtkmodule.c: put in Paul Fisher's enhancements to the threading
	code.  It should now work better with multiple threads calling
	GTK+ routines (remember to use threads_enter/threads_leave), and
	doesn't reintroduce the global interpreter lock problems that
	Duncan's original code worked around.

	* configure.in: added a check for the numpy header.
	
	* GdkImlib.py: added wrappers for the numpy routines.

	* gdkimlibmodule.c: added Travis Oliphant's Numeric python stuff to
	the imlib module.

1999-07-20  Matt Wilson  <msw@redhat.com>

	* gtk.py (gdk_flush): new wrapper
	* gtkmodule.c (_wrap_gdk_flush): new implementation

1999-07-19  James Henstridge  <james@daa.com.au>

	* gtk.py (GtkAdjustment.set_all): a wrapper for the new function.

	* gtkmodule.c (_wrap_gtk_adjustment_set_all): simple wrapper for
	setting values on an adjustment.

	* gtk.py (GtkCList.get_column_width): a wrapper for this new function.

	* gtkmodule.c (_wrap_gtk_clist_get_column_width): a function to get
	the column width for a column in a clist.

	* gtk.py (_filtprops): convert GtkAccelGroup and GdkImlibImage types
	back to the C equivalents.  This makes adding GnomeCanvasImage items
	to the GnomeCanvas easier.
	(GtkCTree.node_get_selectable): added wrapper function.

1999-07-18  James Henstridge  <james@daa.com.au>
