@@ -5,13 +5,13 @@
 (define-func glade_xml_new
   GladeXML
   ((string filename)
-   (string rooot)))
+   (string rooot (null-ok))))
 
 (define-func glade_xml_new_with_domain
   GladeXML
   ((string filename)
-   (string root)
-   (string domain)))
+   (string root (null-ok))
+   (string domain (null-ok))))
 
 ; glade_xml_signal_connect_full
 ; glade_xml_signal_autoconnect_full
