@@ -1,5 +1,14 @@
 1999-08-02  James Henstridge  <james@daa.com.au>
 
+	* libglade.py: new file that wraps the _libglade module.
+
+	* libglademodule.c: handle connecting to another object correctly.
+
+	* gtkmodule.c: added support for passing an object for
+	gtk_signal_connect_object type behaviour.
+	(_wrap_gtk_signal_connect_object)
+	(_wrap_gtk_signal_connect_object_after): new wrappers.
+
 	* gtk.py (idle_add, timeout_add, quit_add): pass extra arguments to
 	the callback.
 
